fix: make input area visible when joining a room and loading messages

--- a/style.css
+++ b/style.css
@@ -161,8 +161,8 @@
 
 #inputArea {
   display: flex;
+  visibility: hidden;
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
-  position: fixed;
 }
